fix: squished logo on FF/Chrome

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -95,7 +95,6 @@ a:hover {
 }
 
 .logo-icon {
-  width: 1.5rem;
   height: 1.5rem;
   display: inline-flex;
   align-items: center;
